RIA-7733_apply_for_costs_notify_applicant: Add personalisation for notifying an applicant. Refactor some previos code and tests for Respondent, fix FT tests