@@ -14,6 +14,7 @@ import uk.gov.hmcts.reform.iacasenotificationsapi.domain.personalisation.EmailNo
 import uk.gov.hmcts.reform.iacasenotificationsapi.domain.personalisation.adminofficer.*;
 import uk.gov.hmcts.reform.iacasenotificationsapi.domain.personalisation.appellant.email.*;
 import uk.gov.hmcts.reform.iacasenotificationsapi.domain.personalisation.appellant.sms.*;
+import uk.gov.hmcts.reform.iacasenotificationsapi.domain.personalisation.applyforcosts.ApplyForCostsApplicantPersonalisation;
 import uk.gov.hmcts.reform.iacasenotificationsapi.domain.personalisation.applyforcosts.ApplyForCostsRespondentPersonalisation;
 import uk.gov.hmcts.reform.iacasenotificationsapi.domain.personalisation.caseofficer.*;
 import uk.gov.hmcts.reform.iacasenotificationsapi.domain.personalisation.caseofficer.editdocument.CaseOfficerEditDocumentsPersonalisation;
@@ -4566,18 +4567,17 @@ public class NotificationGeneratorConfiguration {
         );
     }
 
-    @Bean("applyForCostsRespondentNotificationGenerator")
-    public List<NotificationGenerator> applyForCostsRespondentNotificationGenerator(
+    @Bean("applyForCostsNotificationGenerator")
+    public List<NotificationGenerator> applyForCostsNotificationGenerator(
         ApplyForCostsRespondentPersonalisation applyForCostsRespondentPersonalisation,
+        ApplyForCostsApplicantPersonalisation applyForCostsApplicantPersonalisation,
         GovNotifyNotificationSender notificationSender,
         NotificationIdAppender notificationIdAppender) {
 
-        return List.of(
-            new EmailNotificationGenerator(
-                newArrayList(Collections.singleton(applyForCostsRespondentPersonalisation)),
-                notificationSender,
-                notificationIdAppender
-            )
+        return Collections.singletonList(new EmailNotificationGenerator(
+            newArrayList(applyForCostsRespondentPersonalisation, applyForCostsApplicantPersonalisation),
+            notificationSender,
+            notificationIdAppender)
         );
     }
 }
